@startuml

class Hospital {
    - List<Patient> patients
    - List<Doctor> doctors
    - List<Appointment> appointments
    - List<Treatment> treatments
    + void addPatient(Patient p)
    + void addDoctor(Doctor d)
    + void addAppointment(App a)
    + Doctor getDoctor(Doctor d)
    + Patient getPatient(Patient p)
    + App getAppointment(App app)
    + void displayDoctors()
    + void displayPatients()
    + void displayAppointm()
    + Patient getPatient(String name)
    + Patient getPatient(int id)
    + Doctor getDoctor(int id)
    + Doctor getDoctor(String name)
    + Appointment getAppointment(int id)
    + Treatment getTreatment(String name)
    + Treatment getTreatment(int id)
}

class Patient {
    - private String patientName
    - private int patientID
    - private int age
    - private String gender
    - private String patientContact
    - private static int lastID = 1000
    + public boolean equals(Patient p)
    + public boolean equals(Object o)
    + public void displayPatientInfo()
    + public String toString()
    + public int ageValidator(int age)
    + public String genderValidator(String gender)
    + getters and setters()

}

class Doctor {
    - private int doctorID
    - private String doctorName
    - private String specialization
    - private static int lastID = 2000
    + public boolean equals(Doctor doctor)
    + public void displayDoctorInfo()
    + getters and setters()
    + public boolean equals(Object o)
    + public String toString()

}

class Appointment {
    - private Doctor doctor;
    - private Patient patient;
    - private ArrayList<Treatment> treatments;
    - private static int lastID = 0;
    - private int appointmentID;
    - private LocalDate date;
    - private String timeSlot;
    + public boolean equals(Appointment app);
    + public boolean equals(Object o)
    + public double calculateBill();
    + public void displayAppointmentInfo();
    + Appointment()
    + Appointment(Doctor doctor, Patient patient, LocalDate date, String timeSlot)
    + Appointment(Doctor doctor, Patient patient, LocalDate date, String timeSlot, ArrayList<Treatment> treatments)
    + getters and setters()
}

class Treatment {
    - private String treatmentName;
    - private static int lastID;
    - private int treatmentID;
    - private double treatmentPrice;
    + public boolean equals(Treatment treatment);
    + public boolean equals(Object o)
    + public void displayTreatmentInfo();
    + public String toString();
    + Treatment()
    + Treatment(String name, double price)
    + getters and setters()
}

Hospital *-- Patient
Hospital *-- Doctor
Hospital *-- Appointment
Hospital *-- Treatment
Appointment *-- Treatment

@enduml
